[gd_scene load_steps=6 format=3 uid="uid://bxm8otw4dlu6q"]

[ext_resource type="Script" path="res://windows/character-customisation/tone.gd" id="1_6sugk"]
[ext_resource type="Texture2D" uid="uid://dqd3hejlpe4qr" path="res://assets/misc/aura2.png" id="1_re3iu"]

[sub_resource type="Animation" id="Animation_k1pos"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin_Tone:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_04tb5"]
resource_name = "in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin_Tone:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.851769, 0.851769, 0.851769, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8hsd"]
_data = {
"RESET": SubResource("Animation_k1pos"),
"in": SubResource("Animation_04tb5")
}

[node name="Tone" type="Node2D"]
script = ExtResource("1_6sugk")

[node name="Outline" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_re3iu")

[node name="Skin_Tone" type="Sprite2D" parent="."]
texture = ExtResource("1_re3iu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8hsd")
}

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -120.0
offset_top = -116.0
offset_right = 125.0
offset_bottom = 116.0

[connection signal="mouse_entered" from="Button" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_control_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
